<resources>
    <string name="app_name">环境数</string>

    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">确定</string>
    <string name="pickerview_year">年</string>
    <string name="pickerview_month">月</string>
    <string name="pickerview_day">日</string>
    <string name="pickerview_hours">时</string>
    <string name="pickerview_minutes">分</string>
    <string name="pickerview_seconds">秒</string>

    <string name="action_settings">Settings</string>
    <string name="string_again_out">再按一次退出程序</string>
    <string name="string_again_refresh">再点击一次刷新数据</string>
    <string name="adddevice">添加设备</string>
    <string name="devicemanage">设备管理</string>
    <string name="deviceinfo">设备信息</string>
    <string name="devicenotnull">设备名不能为空</string>
    <string name="devicenotsame">设备名不能与现有设备名相同</string>
    <string name="deviceencoding">设备编码</string>
    <string name="unbindsucess">解绑成功</string>
    <string name="unbinderror">解绑失败</string>
    <string name="input_correct_phonenum">请输入正确的手机号</string>
    <string name="input_phonenum_notnull">手机号不能为空</string>
    <string name="input_username_notnull">用户名不能为空</string>
    <string name="passwd_cannotsame">新密码和旧密码不能一致</string>
    <string name="passwd_notsame">密码不一致</string>
    <string name="passwd_revise_sucess">密码修改成功</string>
    <string name="oldpasswd_error">原密码错误</string>
    <string name="passwd_revise_error">密码修改失败</string>
    <string name="verify_notnull">验证码不能为空</string>
    <string name="phonenum_already">该手机号已经被注册</string>
    <string name="password_notnull">密码不能为空</string>
    <string name="input_notnull">输入不能为空</string>
    <string name="nickname_notsame">不能与原昵称一致</string>
    <string name="feedback_sucess">反馈成功</string>
    <string name="revise_nickname_sucess">昵称修改成功</string>
    <string name="revise_nickname_error">昵称修改失败</string>
    <string name="thisphoneisalready">该手机号已经被注册</string>
    <string name="feedback_error">反馈失败</string>
    <string name="userisno">用户不存在</string>
    <string name="getverify">获取验证码</string>
    <string name="sendverify_sucess">验证码发送成功</string>
    <string name="resetpasswd_sucess">密码重置成功</string>
    <string name="resetpasswd_error">密码重置失败</string>
    <string name="sendverify_error">验证码发送失败</string>
    <string name="devicedetail">设备名称</string>
    <string name="device_style">设备类型</string>
    <string name="device_history">历史数据</string>
    <string name="mac">MAC</string>
    <string name="params2">参数2</string>
    <string name="params3">参数3</string>
    <string name="params4">参数4</string>
    <string name="device_unbind">解绑该设备</string>
    <string name="input_wifi_password">请输入wifi密码</string>
    <string name="revisedevicedetail">修改设备描述</string>
    <string name="revise_sucess">修改成功</string>
    <string name="thisdate_nodata">当前日期没有数据</string>
    <string name="revise_error">修改失败</string>
    <string name="forgetpwd">找回密码</string>
    <string name="userfeedback">用户反馈</string>
    <string name="getvalidate">获取验证码</string>
    <string name="input_phonenum">请输入注册手机号</string>
    <string name="input_username">请输入手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_email">请填写邮箱用于接收统计报表</string>
    <string name="input_validate">请输入验证码</string>
    <string name="input_newpwd">请输入新密码</string>
    <string name="input_oldpwd">请输入原密码</string>
    <string name="input_aginnewpwd">请确认新密码</string>
    <string name="input_content">请输入您宝贵的意见</string>
    <string name="resetpwd">重置密码</string>
    <string name="personal">个人中心</string>
    <string name="revisenickname">修改昵称</string>
    <string name="revisepwd">修改密码</string>
    <string name="register">注 册</string>
    <string name="avg_number_label">家庭综合指数</string>
    <string name="register_sucess">注册成功</string>
    <string name="register_error">注册失败</string>
    <string name="login">登 录</string>
    <string name="revise">修 改</string>
    <string name="misspwd">忘记密码?</string>
    <string name="ok">确 定</string>
    <string name="commit">提 交</string>
    <string name="nickname">昵称</string>
    <string name="start_connect">开始连接</string>
    <string name="lwcheck">滤网检测</string>
    <string name="lvcheck1">请先将空气树放在空气净化</string>
    <string name="lvcheck2">器出风口</string>
    <string name="startcheck">开始检测</string>
    <string name="feedback">用户反馈</string>
    <string name="email">邮箱</string>
    <string name="checkversion">检查更新</string>
    <string name="exit_user">退出当前账号</string>
    <string name="complete">完 成</string>
    <string name="input_device_name">输入设备名称</string>
    <string name="add_device_success">添加设备成功</string>
    <string name="add_device_err">对不起，设备添加过程中发生错误，请重新添加</string>
    <string name="add_device_loading">正在连接，请稍后</string>
    <string name="check_loading">正在检测中</string>
    <string name="title_shop">商城</string>
    <string name="history_data">历史数据</string>
    <string name="online_shop">在线商城</string>
    <string name="devicemanager">设备管理</string>
    <string name="monitor_pm">PM2.5</string>
    <string name="monitor_humidity">湿度</string>
    <string name="monitor_temperature">温度</string>
    <string name="monitor_windSpeed">风速</string>
    <string name="monitor_formaldehyde">甲醛</string>
    <string name="cleanallair">净化空气总量</string>
    <string name="filterlife">滤芯寿命</string>
    <string name="getdevice_error">获取设备失败</string>
    <string name="getdata_error">网络异常</string>
    <string name="particulate">PM2.5(标准颗粒物)：</string>
    <string name="fengsu">风速：</string>
    <string name="particulate003">PM2.5(0.03um以上颗粒数)：</string>
    <string name="Err1000">出 错</string>
    <string name="get_none">未获取</string>
    <string name="net_error">网络连接异常</string>
    <string name="Err3811">对不起，此设备已被绑定</string>
    <string name="Err3501">账号不存在</string>
    <string name="Err3504">用户名或密码错误</string>
    <string name="Err1999">网络错误</string>
    <string name="Err3502">账号已经存在</string>
    <string name="Err3505">验证码错误</string>
    <string name="Err3506">验证码已失效</string>
    <string name="dialogtitle">提 示</string>
    <string name="exit">是否确定退出？</string>
    <string name="cancle">取 消</string>
    <string name="getlist_error">获取列表失败</string>
    <string name="airquality_good">优</string>
    <string name="airquality_very">良</string>
    <string name="airquality_general">中</string>
    <string name="airquality_poor">差</string>
    <string name="airquality_unknow">未知</string>
    <string name="sug_trunon">建议打开空气净化器</string>
    <string name="sug_alreadyon">空气净化器已打开</string>
    <string name="sug_off">空气净化器已关闭</string>
    <string name="good">咱家空气棒棒哒，连呼吸都是甜的呢~</string>
    <string name="very">空气不错哦~只要再一丢丢的努力就完美啦~</string>
    <string name="general">加把劲吧，咱家空气需要大大的改善~</string>
    <string name="poor">你家的空气太糟糕啦，我要离家出走了~</string>
    <string name="nullValue">--</string>
    <string name="refresh_down_text">下拉可刷新</string>
    <string name="refresh_release_text">松开可刷新</string>
    <string name="toast_text">ScrollView下拉刷新完毕</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">松开可以刷新</string>
    <string name="lastUpdateTime">最近更新：%s</string>
    <string name="load_full">已加载全部</string>
    <string name="no_data">暂无数据</string>
    <string name="more">加载中</string>
    <string name="d">图片描述</string>

    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗?</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
