<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/lay_title" />

    <LinearLayout
        android:orientation="vertical"
        android:padding="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginTop="33.0dip">

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="0.6">

                <LinearLayout
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:background="@color/white"
                    android:layout_width="fill_parent"
                    android:layout_height="48.0dip">

                    <EditText
                        android:textSize="@dimen/textsize_30px"
                        android:textColor="@color/etcolor"
                        android:textColorHint="@color/hintcolor"
                        android:id="@id/et_phonenum"
                        android:background="@null"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="14.0dip"
                        android:layout_marginRight="10.0dip"
                        android:hint="@string/input_phonenum"
                        android:singleLine="true"
                        android:maxLength="11"
                        android:inputType="phone" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="8.0dip"
                android:layout_weight="0.35">

                <Button
                    android:textSize="@dimen/textsize_30px"
                    android:textColor="@color/hintcolor"
                    android:id="@id/btn_getvalidate"
                    android:background="@color/btnyanzhengnormal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/getvalidate" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginTop="10.0dip">

            <EditText
                android:textSize="@dimen/textsize_30px"
                android:textColor="@color/etcolor"
                android:textColorHint="@color/hintcolor"
                android:id="@id/et_inputvalidate"
                android:background="@null"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="14.0dip"
                android:layout_marginRight="10.0dip"
                android:hint="@string/input_validate"
                android:singleLine="true"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_width="fill_parent"
            android:layout_height="48.0dip"
            android:layout_marginTop="10.0dip">

            <EditText
                android:textSize="@dimen/textsize_30px"
                android:textColor="@color/etcolor"
                android:textColorHint="@color/hintcolor"
                android:id="@id/et_inputpasswd"
                android:background="@null"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginLeft="14.0dip"
                android:layout_marginRight="10.0dip"
                android:hint="@string/input_pwd"
                android:singleLine="true"
                android:maxLength="20"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:textSize="@dimen/textsize_36px"
            android:textColor="@color/btntextnormal"
            android:id="@id/btn_register"
            android:background="@mipmap/button_bg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="61.0dip"
            android:text="@string/register" />
    </LinearLayout>
</LinearLayout>