<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/lay_title" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip">

        <TextView
            android:textSize="@dimen/textsize_30px"
            android:textColor="@color/listtextcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:text="@string/deviceencoding"
            android:layout_centerVertical="true" />

        <TextView
            android:textSize="@dimen/textsize_30px"
            android:textColor="@color/listtextcolor2"
            android:id="@id/tv_bianma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="32.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:background="@color/fengeline2"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip" />

    <RelativeLayout
        android:id="@id/rl1"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip">

        <TextView
            android:textSize="@dimen/textsize_30px"
            android:textColor="@color/listtextcolor"
            android:id="@id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:text="@string/devicedetail"
            android:layout_centerVertical="true" />

        <ImageView
            android:id="@id/iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="18.0dip"
            android:src="@mipmap/details_small"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

        <TextView
            android:textSize="@dimen/textsize_30px"
            android:textColor="@color/listtextcolor2"
            android:id="@id/tv_where"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8.0dip"
            android:layout_toLeftOf="@id/iv"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:background="@color/fengeline2"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip">

        <TextView
            android:textSize="@dimen/textsize_30px"
            android:textColor="@color/listtextcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:text="@string/device_style"
            android:layout_centerVertical="true" />

        <TextView
            android:textSize="@dimen/textsize_30px"
            android:textColor="@color/listtextcolor2"
            android:id="@id/tv_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="32.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:background="@color/fengeline2"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50.0dip">

        <TextView
            android:textSize="@dimen/textsize_30px"
            android:textColor="@color/listtextcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:text="@string/mac"
            android:layout_centerVertical="true" />

        <TextView
            android:textSize="@dimen/textsize_30px"
            android:textColor="@color/listtextcolor2"
            android:id="@id/tv_mac"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="32.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:background="@color/fengeline2"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip" />

    <RelativeLayout
        android:id="@id/rl4"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip">

        <TextView
            android:textSize="@dimen/textsize_30px"
            android:textColor="@color/listtextcolor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0dip"
            android:text="@string/device_history"
            android:layout_centerVertical="true" />
        <TextView
            android:textSize="@dimen/textsize_30px"
            android:textColor="@color/listtextcolor2"
            android:id="@id/tv_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="32.0dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />
    </RelativeLayout>

    <View
        android:background="@color/fengeline2"
        android:layout_width="fill_parent"
        android:layout_height="0.5dip" />

    <LinearLayout
        android:padding="15.0dip"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:textSize="@dimen/textsize_36px"
            android:textColor="@color/white"
            android:id="@id/btn_removebind"
            android:background="@mipmap/button_bg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65.0dip"
            android:text="@string/device_unbind" />
    </LinearLayout>
</LinearLayout>